fix(global): define vertical spacing between components (#54)

--- a/src/assets/styles/includes/mixins.css
+++ b/src/assets/styles/includes/mixins.css
@@ -84,3 +84,46 @@
     width: var(--container-xl);
   }
 }
+
+@define-mixin component-vertical-spacing {
+  padding-bottom: 30px;
+  padding-top: 0;
+
+  @media (--bp-md) {
+    padding-bottom: 60px;
+  }
+
+  :global(.headline)& {
+    padding-bottom: 30px;
+    padding-top: 30px;
+
+    @media (--bp-md) {
+      padding-bottom: 60px;
+      padding-top: 40px;
+    }
+
+    @media (--bp-lg) {
+      padding-bottom: 60px;
+      padding-top: 60px;
+    }
+  }
+
+  :global(.shareComponent)& {
+    padding-bottom: 30px;
+    padding-top: 20px;
+
+    @media (--bp-md) {
+      padding-bottom: 60px;
+      padding-top: 40px;
+    }
+  }
+
+  :global(.sectionTitle)& {
+    padding-bottom: 20px;
+    padding-top: 0;
+
+    @media (--bp-md) {
+      padding-bottom: 40px;
+    }
+  }
+}
