--- a/src/assets/styles/includes/typography.css
+++ b/src/assets/styles/includes/typography.css
@@ -29,6 +29,7 @@
   font-size: 48px;
   font-weight: 400;
   line-height: 38px;
+  margin-bottom: 0;
 
   em {
     font-family: var(--font-serif-light-italic);
