--- a/src/content-modules/global/body-text/body-text.module.css
+++ b/src/content-modules/global/body-text/body-text.module.css
@@ -21,6 +21,8 @@
 
   p {
     @mixin type-paragraph;
+    @mixin component-vertical-spacing;
+    margin-bottom: 0;
   }
 
   strong {
