--- a/src/content-modules/global/inline-image/inline-image.module.css
+++ b/src/content-modules/global/inline-image/inline-image.module.css
@@ -3,15 +3,9 @@
 @import '../../../assets/styles/includes/typography.css';
 
 .componentWrapper {
+  @mixin component-vertical-spacing;
   @mixin grid-container;
   flex-wrap: wrap;
-  margin-bottom: 10px;
-  margin-top: 30px;
-
-  @media (--bp-md) {
-    margin-bottom: 40px;
-    margin-top: 60px;
-  }
 }
 
 .image {
